--- a/ignews/src/styles/global.scss
+++ b/ignews/src/styles/global.scss
@@ -8,6 +8,7 @@
   --white: #ffffff;
   --gray-100: #e1e1e6;
   --gray-400: #a8a8b3;
+  --gray-700: #1f2729;
   --gray-900: #121214;
   --cyano-700: #61dafd;
   --yellow-700: #eba417;
